# gltut-cpp

./: .clang-format  .gitignore  .travis.yml  Authors.md  CODE_OF_CONDUCT.md  Changelog.md  Code_of_conduct.md  Codeowners  Contributing.md  Credits.md  LICENSE  License.md  README.md  Readme.md  build.sh  build_and_run.sh  changelog.md  code_of_conduct.md  index.md  meson.build  run.sh  support.md
scripts/: copy_to_build.py
src/: .clang-format  meson.build
src/all/: app_base.cpp  debug.cpp  glad.c  img_stuff.cpp  meson.build  model_base.cpp  model_cube.cpp  model_ground.cpp  opengl_stuff.cpp  options.cpp  shader_stuff.cpp  stb_image_impl.cpp  window.cpp  window_factory.cpp  window_glfw.cpp
src/cs0/: cs0_window.cpp  meson.build
src/cs0-window/: cs0-window.cpp  meson.build
src/cs1/: cs1_triangles.cpp  meson.build
src/cs1-triangles/: meson.build
src/cs2/: cs2_moving.cpp  meson.build
src/cs2-moving/: meson.build
src/cs3/: Makefile  app_base.cpp  app_base.h  app_skybox.cpp  app_skybox.h  cs3_config.h.in  cs3_skybox.cpp  cs_config.h  debug.h  do_args.cpp  do_args.h  do_env.h  do_meson.cpp  do_meson.h  do_yaml.cpp  global.cpp  global.h  img_stuff.cpp  img_stuff.h  meson.build  model_base.cpp  model_base.h  model_cube.cpp  model_cube.h  options_store.cpp  options_store.h  shader_stuff.cpp  shader_stuff.h  stb_image_impl.cpp  window.h  window_factory.cpp  window_factory.h  window_glfw.cpp  window_glfw.h
src/cs3-skybox/: .gitignore  App.cpp  App.h  App_base.cpp  App_base.h  App_window.cpp  App_window.h  CMakeLists.txt  Global.cpp  Global.h  Makefile  Model_base.cpp  Model_base.h  Model_cube.cpp  Model_cube.h  Options_store.cpp  Options_store.h  Opts.cpp  Opts.h  app.cpp  app.h  app_base.cpp  app_base.h  cs_config.h  cs_config.h.in  debug.cpp  debug.h  do_args.cpp  do_args.h  do_buildconf.cpp  do_buildconf.h  do_env.cpp  do_env.h  do_meson.cpp  do_meson.h  do_yaml.cpp  do_yaml.h  glfw_stuff.cpp  glfw_stuff.h  global.h  (+14 more)
src/cs3-skybox/assets/shaders/: skybox.frag  skybox.vert  test.frag  test.vert  test0.frag  test0.vert  test1.vert  test2.vert  test3.frag
src/cs3/assets/shaders/: cubeobj.vert
src/cs3/assets/textures/: meson.build
src/cs3/shaders/: meson.build
src/cs4/: Makefile  app.cpp  app_ground.cpp  app_ground.h  cs4_config.h.in  cs4_ground.cpp  cs_config.h  meson.build
src/cs4-ground/: Makefile  app.cpp  app.h  app.hpp  app_base.cpp  app_base.hpp  cs_config.hpp  debug.cpp  do_args.cpp  do_args.hpp  do_env.cpp  do_env.hpp  do_meson.cpp  do_meson.hpp  do_yaml.cpp  do_yaml.hpp  global.cpp  global.hpp  main.cpp  meson.build  model_base.cpp  model_base.hpp  model_cube.cpp  model_cube.hpp  options.cpp  options.h  options.hpp  options_store.cpp  options_store.hpp  shader_stuff.hpp  tags  window.cpp  window_factory.cpp  window_glfw.cpp  window_glfw.hpp
src/cs4-ground/assets/: meson.build
src/cs4-ground/assets/shaders/: cubeobj.frag  cubeobj.vert  ground.frag  ground.vert  meson.build  skybox.frag  skybox.vert
src/cs4-ground/config/: cs_config.h  cs_config.hpp  cs_config.hpp.in  meson.build
src/cs4/config/: conf.yml
src/cs5/: Makefile  app_lighting.cpp  app_lighting.h  cs5_lighting.cpp  cs_config.h  cs_config.h.in  meson.build
src/cs5/assets/: meson.build
src/cs5/assets/shaders/: cubeobj.frag
src/cs5/shaders/: cubeobj.vert
src/cs6/: app_reflection.cpp  app_reflection.h  cs6_config.h.in  cs6_reflection.cpp  meson.build
src/cs6/shaders/: cubes.frag  cubes_refl.frag  ground.frag  skybox.frag  skybox.vert
src/inc/: app_base.h  app_base.hpp  debug.h  debug.hpp  glad.h  img_stuff.h  img_stuff.hpp  khrplatform.h  meson.build  model_base.h  model_base.hpp  model_cube.h  model_ground.h  model_ground.hpp  opengl_stuff.h  opengl_stuff.hpp  options.h  shader_stuff.h  stb_image.h  window.h  window.hpp  window_factory.h  window_factory.hpp  window_glfw.h
subprojects/glad/: meson.build
