cs_lib = library('cs', 
    'app_base.cpp', 
    'debug.cpp', 
    'img_stuff.cpp', 
    'model_base.cpp', 
    'model_cube.cpp', 
    'model_ground.cpp', 
    'opengl_stuff.cpp', 
    'options.cpp', 
    'shader_stuff.cpp', 
    'stb_image_impl.cpp', 
    'window.cpp', 
    'window_factory.cpp', 
    'window_glfw.cpp', 
    include_directories: cs_inc,
    dependencies: [glew_dep, glfw_dep]
    )


